--- a/style.css
+++ b/style.css
@@ -2,122 +2,114 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-    font-family: sans-serif;
-}
-
-body {
-    height: 100vh;
-    display: grid;
-    grid-template:
-        'bio' 350px
-        'projects' 150px
-        'experience' 200px
-    ;
-}
-
-.bio {
-    grid-area: bio;
-    background-color: rgb(222, 97, 59);
-}
-
-.projects {
-    grid-area: projects;
-    background-color: rgb(212, 227, 219);
-}
-
-.experience {
-    grid-area: experience;
-    background-color: rgb(91, 191, 234);
-}
-
-.main-header {
-    background-color: rgb(62, 58, 58);
-    color: rgb(207, 218, 218);
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.name {
-    float: left;
-}
-
-.projects-header {
-    float: right;
-    margin-right: 5px;
-}
-
-.experience-header {
-    float: right;
-    margin-right: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .top {
-    float: right;
-    margin-right: 5px;
+    background-color: #3743f6;
+    padding: 1rem;
+    height: 100vh;
+    display: grid;
+    align-content: space-between;
 }
 
-.description-div {
-    border-color: rgb(35, 34, 34);
-    border-style: solid;
-    margin-top: 20px;
-    text-align: center;
-    font-size: medium;
-    width: 650px;
-    margin: auto;
-    margin-top: 70px;
-    color: aliceblue;
-    background-color: rgb(35, 34, 34);
-}
-
-.title {
-    color: rgb(228, 224, 20);
-}
-
-.projects-title {
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.lottery-div {
-    border-color: rgb(211, 214, 216);
-    border: solid;
-    width: 300px;
-    padding: 5px;
-    float: left;
-    margin-left: 255px;
-}
-
-.lottery-title {
-    color: rgb(222, 97, 59);
-    ;
-}
-
-.lottery-project {
-    text-align: center;
-    background-color: rgb(222, 97, 59);
+.top header {
+    background-color: #35382e;
     color: white;
-    width: 150px;
-    margin-left: 70px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-radius: 3px;
 }
 
-.lottery-div2 {
-    border-color: rgb(211, 214, 216);
-    border: solid;
-    width: 300px;
-    float: left;
-    padding: 5px;
-    margin: auto;
-    margin-left: 255px;
+.nav-links {
+    list-style: none;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
 }
 
-.lottery-div3 {
-    border-color: rgb(211, 214, 216);
-    border: solid;
-    width: 300px;
-    float: left;
-    padding: 5px;
-    margin: auto;
-    margin-left: 255px;
+.nav-link {
+    color: white;
+    text-decoration: none;
+}
+
+.center-box {
+    background-color: #35382e;
+    color: white;
+    width: 70vw;
+    max-width: 500px;
+    justify-self: center;
+    border-radius: 3px;
+    padding: 1rem;
+}
+
+.ceter-box-title {
+    text-align: center;
+    color: #faf616;
+    margin-bottom: 1rem;
+}
+
+.expand {
+    text-align: center;
+    color: white;
+}
+
+.projects {
+    background-color: #faf616;
+    padding: 1rem;
+    display: grid;
+    gap: 1rem;
+}
+
+.projects h2 {
+    text-align: center;
+    font-weight: 300;
+}
+
+.project-list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+}
+
+.project-item {
+    border: 3px solid black;
+    border-radius: 4px;
+    padding: 1rem;
+    display: grid;
+    gap: 0.5rem;
+}
+
+.project-item h3 {
+    padding: 1rem;
+    color: #3743f6;
+}
+
+.project-item a {
+    background-color: #3743f6;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding: 0.5rem 0;
+    border-radius: 3px;
+}
+
+.experience {
+    background-color: #fbfbfb;
+    padding: 1rem;
+}
+
+footer {
+    background-color: #000000;
+    padding: 0.5rem 1rem;
+    text-align: center;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
 }
