--- a/style.css
+++ b/style.css
@@ -98,9 +98,34 @@
     border-radius: 3px;
 }
 
-.experience {
-    background-color: #fbfbfb;
+.education {
+    background-color: #ffffff;
     padding: 1rem;
+    display: grid;
+    gap: 1rem;
+}
+
+.education-list {
+    display: grid;
+    gap: 1rem;
+    padding: 5px;
+    list-style: none;
+    gap: 1rem;
+    width: fit-content;
+}
+
+.education-item {
+    border: 2px solid black;
+    border-radius: 4px;
+    padding: 1rem;
+    display: grid;
+    gap: 0.5rem;
+}
+
+
+.education h2 {
+    text-align: center;
+    font-weight: 300;
 }
 
 footer {
